Hopefully fixed overflow issues, removed monaco map section

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
-:root {
-  --main-top-offset: calc(var(--menu-bar-h) + var(--tab-switcher-h) + var(--buttons-h) );
-}
+/* :root {
+} */
 
 .maincontainer {
   display: flex;
